refactor: separate presenter logic to refactoring

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "caniuse-lite": "^1.0.30001332",
     "netlify": "^7.0.1",
     "netlify-cli": "^4.2.1",
     "react": "^17.0.2",
@@ -16,9 +17,9 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --watchAll --verbose",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
