--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:cypress/recommended"
     ]
   },
   "browserslist": {
@@ -42,7 +43,9 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/cypress": "^8.0.2",
     "cypress": "^9.6.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "react-test-renderer": "^17.0.2"
   }
 }
